'Active' filter title changed

--- a/public/locales/en/default.json
+++ b/public/locales/en/default.json
@@ -5,6 +5,7 @@
 		"inputPlaceholder": "What needs to be done?",
 		"footer": {
 			"itemsLeft": "{{ count }} items left",
+			"active": "Active",
 			"all": "All",
 			"completed": "Completed"
 		}
