Add active footer its name

--- a/public/locales/en/default.json
+++ b/public/locales/en/default.json
@@ -6,7 +6,8 @@
 		"footer": {
 			"itemsLeft": "{{ count }} items left",
 			"all": "All",
-			"completed": "Completed"
+			"completed": "Completed",
+            "active": "Active"
 		}
 	}
 }
