Added styles for select and priority markers

--- a/public/locales/en/default.json
+++ b/public/locales/en/default.json
@@ -8,6 +8,12 @@
 			"active":"Uncompleted",
 			"all": "All",
 			"completed": "Completed"
+		},
+		"priorities": {
+			"low": "low priority",
+			"medium": "medium priority",
+			"high": "high priority",
+			"purple": "purple!"
 		}
 	}
 }
