--- a/public/locales/en/default.json
+++ b/public/locales/en/default.json
@@ -6,6 +6,7 @@
 		"footer": {
 			"itemsLeft": "{{ count }} items left",
 			"all": "All",
+			"active": "Active",
 			"completed": "Completed"
 		}
 	}
